# web_bike_app

./: .gitignore  Dockerfile  README.md  pyproject.toml  web_bike_app.py
data/: ephemerides.csv  lockdown.csv  reseau-cyclable-less.csv  vacs_scolaires.csv
scripts/: model_per_counter.py
scripts/fitted_models/: model_0.joblib  model_1.joblib  model_10.joblib  model_11.joblib  model_12.joblib  model_13.joblib  model_14.joblib  model_15.joblib  model_16.joblib  model_17.joblib  model_18.joblib  model_19.joblib  model_2.joblib  model_20.joblib  model_21.joblib  model_22.joblib  model_23.joblib  model_24.joblib  model_25.joblib  model_26.joblib  model_27.joblib  model_28.joblib  model_29.joblib  model_3.joblib  model_30.joblib  model_31.joblib  model_32.joblib  model_33.joblib  model_34.joblib  model_35.joblib  model_36.joblib  model_37.joblib  model_38.joblib  model_39.joblib  model_4.joblib  model_40.joblib  model_41.joblib  model_42.joblib  model_43.joblib  model_44.joblib  (+16 more)
